<resources>

    <string name="app_name">Auto Rover Streaming</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ABR Controller</string>
    <string name="cd_prompt">Display image type</string>
    <string name="ir_label">IR Readings</string>
    <string name="ir_left">IR left</string>
    <string name="ir_center">IR center</string>
    <string name="ir_right">IR right</string>
    <string name="ir_back">IR back</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="turn">Turn</string>
    <string name="settings">Settings</string>

    <string-array name="cd_arrays">
        <item>RC Mode</item>
        <item>Serial Mode</item>
        <item>Rover 4WD Mode</item>
        <item>Rover Tank Mode</item>
    </string-array>

</resources>